--- a/994. Rotting Oranges.ipynb
+++ b/994. Rotting Oranges.ipynb
@@ -20,6 +20,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- bfs優點\n",
+    "  - 最短時間\n",
+    "    - dfs可以使所有橘子腐爛，但可能會走較長路徑\n",
+    "  - 時間準確性\n",
+    "    -  bfs會按照「層」的概念同時處理所有腐爛橘子\n",
+    "    -  dfs會一直往深處走，無法反映同時腐爛的特性\n",
+    "  - bfs可模擬「同心圓」擴散的特性\n",
+    "  - 平行處理\n",
+    "    -  bfs可以同時處理所有腐爛橘子\n",
+    "    -  dfs只能一個一個處理腐爛橘子"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
