--- a/127. Word Ladder.ipynb
+++ b/127. Word Ladder.ipynb
@@ -8,164 +8,187 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O( m \\times n )$**  \n",
+    "**空間複雜度: $O( m \\times n )$**\n",
+    "\n",
+    "- 變數解釋:\n",
+    "  - `m`: 單詞的長度 (例如: \"hot\" -> 3)\n",
+    "  - `n`: 單詞的數量 (例如: [\"hot\",\"dot\",\"dog\",\"lot\",\"log\",\"cog\"] -> 6)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import defaultdict\n",
-    "from collections import deque\n",
+    "from typing import List\n",
+    "from collections import defaultdict, deque\n",
     "\n",
     "class Solution:\n",
-    "    def ladderLength(self, beginWord, endWord, wordList):\n",
-    "        if (endWord not in wordList) or (not endWord) or (not beginWord) or (not wordList):\n",
+    "    def ladderLength(self, beginWord: str, endWord: str, wordList: List[str]) -> int:\n",
+    "        # 如果結束詞不在字典中,直接返回0\n",
+    "        if endWord not in wordList:\n",
     "            return 0\n",
-    "            \n",
-    "        L = len(beginWord)\n",
-    "        all_combo_dict = defaultdict(list)\n",
-    "        for word in wordList:\n",
-    "            for i in range(L):\n",
-    "                all_combo_dict[word[:i] + \"*\" + word[i+1:]].append(word)\n",
-    "        print(f\"all_combo_dict = {all_combo_dict}\")\n",
+    "        \n",
+    "        # 獲取單詞長度\n",
+    "        word_length = len(beginWord)\n",
     "\n",
-    "        queue = deque([(beginWord, 1)])\n",
-    "        print(f\"queue = {queue}\")\n",
-    "        visited = set()\n",
+    "        # 建立pattern到單詞的映射字典\n",
+    "        # 例如:\"hot\" -> \"*ot\",\"h*t\",\"ho*\" \n",
+    "        neighbors = defaultdict(list) # space: O(m * n)\n",
+    "        for word in set(wordList):\n",
+    "            for i in range(word_length):\n",
+    "                pattern = word[:i] + \"*\" + word[i+1:]\n",
+    "                neighbors[pattern].append(word)\n",
+    "        print(f\"{neighbors=}\")\n",
+    "\n",
+    "        # 初始化隊列,從beginWord開始,level為1\n",
+    "        queue = deque([(beginWord, 1)]) # space: O(m * n)\n",
+    "        # 記錄已訪問過的單詞\n",
+    "        visited = set() # space: O(m * n)，最多有n個單詞，每個單詞最多有m個pattern\n",
     "        visited.add(beginWord)\n",
-    "        print(f\"visited = {visited}\")\n",
     "\n",
-    "        while queue:\n",
-    "            print(f\"{'_'*200}\")\n",
-    "            print(f\"init: queue = {queue}\")\n",
-    "            current_word, level = queue.popleft()     \n",
-    "            print(f\"current_word = {current_word}, level = {level}\")\n",
-    "            \n",
-    "            for i in range(L):\n",
-    "                print(f\"{'-'*100}\")\n",
-    "                intermediate_word = current_word[:i] + \"*\" + current_word[i+1:]\n",
-    "                print(f\"intermediate_word = {intermediate_word}\")\n",
-    "                print(f\"all_combo_dict[intermediate_word] = {all_combo_dict[intermediate_word]}\")\n",
-    "                for word in all_combo_dict[intermediate_word]:\n",
-    "                    if word == endWord:\n",
-    "                        print(f\"(word = {word}) == (endWord = {endWord})\")\n",
-    "                        print(f\"level = {level + 1}\")\n",
+    "        # BFS搜索\n",
+    "        while queue: # time: O(m * n)\n",
+    "            word, level = queue.popleft() # 彈出隊列頭部元素    \n",
+    "            print(\"_\" * 100)\n",
+    "            print(f\"{word=}, {level=}\")\n",
+    "\n",
+    "            # 對當前單詞的每個位置進行替換\n",
+    "            for i in range(word_length): # time: O(m)\n",
+    "                print(\"-\" * 100)\n",
+    "                pattern = word[:i] + \"*\" + word[i+1:] # 生成pattern，例如\"hot\" -> \"*ot\",\"h*t\",\"ho*\" \n",
+    "                print(f\"{pattern=}, {neighbors[pattern]=}\")\n",
+    "                # 檢查所有可能的鄰居單詞\n",
+    "                for neighbor in neighbors[pattern]: # time: O(n)\n",
+    "                    print(f\"\\n{neighbor=}\")\n",
+    "                    # 如果找到結束詞,返回路徑長度\n",
+    "                    if neighbor == endWord:\n",
+    "                        print(f\"(({neighbor=}) == ({endWord=})) -> return {(level+1)=}\")\n",
     "                        return level + 1\n",
-    "                    \n",
-    "                    if word not in visited:\n",
-    "                        print(f\"-> (word = {word}) not in (visited = {visited})\")\n",
-    "                        print(f\"init: visited = {visited}\")\n",
-    "                        visited.add(word)\n",
-    "                        print(f\"end:  visited = {visited}\")\n",
-    "                        queue.append((word, level + 1))\n",
-    "                        print(f\"end:  queue = {queue}\")\n",
-    "                    else:                        \n",
-    "                        print(f\"-> (word = {word}) in (visited = {visited})\")\n",
+    "\n",
+    "                    # 如果鄰居單詞未訪問過,加入隊列\n",
+    "                    if neighbor not in visited:\n",
+    "                        print(f\"({neighbor=} not in {visited=})\")\n",
+    "                        visited.add(neighbor)\n",
+    "                        queue.append((neighbor, level + 1))\n",
+    "                        print(f\"add ({neighbor=}) to {visited=}\")\n",
+    "                        print(f\"add ({neighbor=}, {(level+1)=}) to {queue=}\")\n",
+    "\n",
+    "                # 清空當前pattern的鄰居列表,避免重複訪問\n",
+    "                neighbors[pattern] = []\n",
+    "                print(f\"neighbors[{pattern}] = {neighbors[pattern]}\")\n",
+    "        \n",
+    "        # 如果無法找到轉換路徑,返回0\n",
     "        return 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "all_combo_dict = defaultdict(<class 'list'>, {'*ot': ['hot', 'dot', 'lot'], 'h*t': ['hot'], 'ho*': ['hot'], 'd*t': ['dot'], 'do*': ['dot', 'dog'], '*og': ['dog', 'log', 'cog'], 'd*g': ['dog'], 'l*t': ['lot'], 'lo*': ['lot', 'log'], 'l*g': ['log'], 'c*g': ['cog'], 'co*': ['cog']})\n",
-      "queue = deque([('hit', 1)])\n",
-      "visited = {'hit'}\n",
-      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
-      "init: queue = deque([('hit', 1)])\n",
-      "current_word = hit, level = 1\n",
+      "neighbors=defaultdict(<class 'list'>, {'*ot': ['dot', 'lot', 'hot'], 'd*t': ['dot'], 'do*': ['dot', 'dog'], 'l*t': ['lot'], 'lo*': ['lot', 'log'], '*og': ['dog', 'log', 'cog'], 'd*g': ['dog'], 'l*g': ['log'], 'c*g': ['cog'], 'co*': ['cog'], 'h*t': ['hot'], 'ho*': ['hot']})\n",
+      "____________________________________________________________________________________________________\n",
+      "word='hit', level=1\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "intermediate_word = *it\n",
-      "all_combo_dict[intermediate_word] = []\n",
+      "pattern='*it', neighbors[pattern]=[]\n",
+      "neighbors[*it] = []\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "intermediate_word = h*t\n",
-      "all_combo_dict[intermediate_word] = ['hot']\n",
-      "-> (word = hot) not in (visited = {'hit'})\n",
-      "init: visited = {'hit'}\n",
-      "end:  visited = {'hot', 'hit'}\n",
-      "end:  queue = deque([('hot', 2)])\n",
+      "pattern='h*t', neighbors[pattern]=['hot']\n",
+      "\n",
+      "neighbor='hot'\n",
+      "(neighbor='hot' not in visited={'hit'})\n",
+      "add (neighbor='hot') to visited={'hit', 'hot'}\n",
+      "add (neighbor='hot', (level+1)=2) to queue=deque([('hot', 2)])\n",
+      "neighbors[h*t] = []\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "intermediate_word = hi*\n",
-      "all_combo_dict[intermediate_word] = []\n",
-      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
-      "init: queue = deque([('hot', 2)])\n",
-      "current_word = hot, level = 2\n",
+      "pattern='hi*', neighbors[pattern]=[]\n",
+      "neighbors[hi*] = []\n",
+      "____________________________________________________________________________________________________\n",
+      "word='hot', level=2\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "intermediate_word = *ot\n",
-      "all_combo_dict[intermediate_word] = ['hot', 'dot', 'lot']\n",
-      "-> (word = hot) in (visited = {'hot', 'hit'})\n",
-      "-> (word = dot) not in (visited = {'hot', 'hit'})\n",
-      "init: visited = {'hot', 'hit'}\n",
-      "end:  visited = {'dot', 'hot', 'hit'}\n",
-      "end:  queue = deque([('dot', 3)])\n",
-      "-> (word = lot) not in (visited = {'dot', 'hot', 'hit'})\n",
-      "init: visited = {'dot', 'hot', 'hit'}\n",
-      "end:  visited = {'dot', 'hot', 'hit', 'lot'}\n",
-      "end:  queue = deque([('dot', 3), ('lot', 3)])\n",
+      "pattern='*ot', neighbors[pattern]=['dot', 'lot', 'hot']\n",
+      "\n",
+      "neighbor='dot'\n",
+      "(neighbor='dot' not in visited={'hit', 'hot'})\n",
+      "add (neighbor='dot') to visited={'hit', 'hot', 'dot'}\n",
+      "add (neighbor='dot', (level+1)=3) to queue=deque([('dot', 3)])\n",
+      "\n",
+      "neighbor='lot'\n",
+      "(neighbor='lot' not in visited={'hit', 'hot', 'dot'})\n",
+      "add (neighbor='lot') to visited={'hit', 'lot', 'hot', 'dot'}\n",
+      "add (neighbor='lot', (level+1)=3) to queue=deque([('dot', 3), ('lot', 3)])\n",
+      "\n",
+      "neighbor='hot'\n",
+      "neighbors[*ot] = []\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "intermediate_word = h*t\n",
-      "all_combo_dict[intermediate_word] = ['hot']\n",
-      "-> (word = hot) in (visited = {'dot', 'hot', 'hit', 'lot'})\n",
+      "pattern='h*t', neighbors[pattern]=[]\n",
+      "neighbors[h*t] = []\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "intermediate_word = ho*\n",
-      "all_combo_dict[intermediate_word] = ['hot']\n",
-      "-> (word = hot) in (visited = {'dot', 'hot', 'hit', 'lot'})\n",
-      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
-      "init: queue = deque([('dot', 3), ('lot', 3)])\n",
-      "current_word = dot, level = 3\n",
+      "pattern='ho*', neighbors[pattern]=['hot']\n",
+      "\n",
+      "neighbor='hot'\n",
+      "neighbors[ho*] = []\n",
+      "____________________________________________________________________________________________________\n",
+      "word='dot', level=3\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "intermediate_word = *ot\n",
-      "all_combo_dict[intermediate_word] = ['hot', 'dot', 'lot']\n",
-      "-> (word = hot) in (visited = {'dot', 'hot', 'hit', 'lot'})\n",
-      "-> (word = dot) in (visited = {'dot', 'hot', 'hit', 'lot'})\n",
-      "-> (word = lot) in (visited = {'dot', 'hot', 'hit', 'lot'})\n",
+      "pattern='*ot', neighbors[pattern]=[]\n",
+      "neighbors[*ot] = []\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "intermediate_word = d*t\n",
-      "all_combo_dict[intermediate_word] = ['dot']\n",
-      "-> (word = dot) in (visited = {'dot', 'hot', 'hit', 'lot'})\n",
+      "pattern='d*t', neighbors[pattern]=['dot']\n",
+      "\n",
+      "neighbor='dot'\n",
+      "neighbors[d*t] = []\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "intermediate_word = do*\n",
-      "all_combo_dict[intermediate_word] = ['dot', 'dog']\n",
-      "-> (word = dot) in (visited = {'dot', 'hot', 'hit', 'lot'})\n",
-      "-> (word = dog) not in (visited = {'dot', 'hot', 'hit', 'lot'})\n",
-      "init: visited = {'dot', 'hot', 'hit', 'lot'}\n",
-      "end:  visited = {'dog', 'hot', 'hit', 'dot', 'lot'}\n",
-      "end:  queue = deque([('lot', 3), ('dog', 4)])\n",
-      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
-      "init: queue = deque([('lot', 3), ('dog', 4)])\n",
-      "current_word = lot, level = 3\n",
+      "pattern='do*', neighbors[pattern]=['dot', 'dog']\n",
+      "\n",
+      "neighbor='dot'\n",
+      "\n",
+      "neighbor='dog'\n",
+      "(neighbor='dog' not in visited={'hit', 'lot', 'hot', 'dot'})\n",
+      "add (neighbor='dog') to visited={'dot', 'lot', 'dog', 'hit', 'hot'}\n",
+      "add (neighbor='dog', (level+1)=4) to queue=deque([('lot', 3), ('dog', 4)])\n",
+      "neighbors[do*] = []\n",
+      "____________________________________________________________________________________________________\n",
+      "word='lot', level=3\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "intermediate_word = *ot\n",
-      "all_combo_dict[intermediate_word] = ['hot', 'dot', 'lot']\n",
-      "-> (word = hot) in (visited = {'dog', 'hot', 'hit', 'dot', 'lot'})\n",
-      "-> (word = dot) in (visited = {'dog', 'hot', 'hit', 'dot', 'lot'})\n",
-      "-> (word = lot) in (visited = {'dog', 'hot', 'hit', 'dot', 'lot'})\n",
+      "pattern='*ot', neighbors[pattern]=[]\n",
+      "neighbors[*ot] = []\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "intermediate_word = l*t\n",
-      "all_combo_dict[intermediate_word] = ['lot']\n",
-      "-> (word = lot) in (visited = {'dog', 'hot', 'hit', 'dot', 'lot'})\n",
+      "pattern='l*t', neighbors[pattern]=['lot']\n",
+      "\n",
+      "neighbor='lot'\n",
+      "neighbors[l*t] = []\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "intermediate_word = lo*\n",
-      "all_combo_dict[intermediate_word] = ['lot', 'log']\n",
-      "-> (word = lot) in (visited = {'dog', 'hot', 'hit', 'dot', 'lot'})\n",
-      "-> (word = log) not in (visited = {'dog', 'hot', 'hit', 'dot', 'lot'})\n",
-      "init: visited = {'dog', 'hot', 'hit', 'dot', 'lot'}\n",
-      "end:  visited = {'dog', 'hot', 'hit', 'dot', 'lot', 'log'}\n",
-      "end:  queue = deque([('dog', 4), ('log', 4)])\n",
-      "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
-      "init: queue = deque([('dog', 4), ('log', 4)])\n",
-      "current_word = dog, level = 4\n",
+      "pattern='lo*', neighbors[pattern]=['lot', 'log']\n",
+      "\n",
+      "neighbor='lot'\n",
+      "\n",
+      "neighbor='log'\n",
+      "(neighbor='log' not in visited={'dot', 'lot', 'dog', 'hit', 'hot'})\n",
+      "add (neighbor='log') to visited={'dot', 'lot', 'dog', 'log', 'hit', 'hot'}\n",
+      "add (neighbor='log', (level+1)=4) to queue=deque([('dog', 4), ('log', 4)])\n",
+      "neighbors[lo*] = []\n",
+      "____________________________________________________________________________________________________\n",
+      "word='dog', level=4\n",
       "----------------------------------------------------------------------------------------------------\n",
-      "intermediate_word = *og\n",
-      "all_combo_dict[intermediate_word] = ['dog', 'log', 'cog']\n",
-      "-> (word = dog) in (visited = {'dog', 'hot', 'hit', 'dot', 'lot', 'log'})\n",
-      "-> (word = log) in (visited = {'dog', 'hot', 'hit', 'dot', 'lot', 'log'})\n",
-      "(word = cog) == (endWord = cog)\n",
-      "level = 5\n"
+      "pattern='*og', neighbors[pattern]=['dog', 'log', 'cog']\n",
+      "\n",
+      "neighbor='dog'\n",
+      "\n",
+      "neighbor='log'\n",
+      "\n",
+      "neighbor='cog'\n",
+      "((neighbor='cog') == (endWord='cog')) -> return (level+1)=5\n"
      ]
     },
     {
@@ -174,7 +197,7 @@
        "5"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
