--- a/130. Surrounded Regions.ipynb
+++ b/130. Surrounded Regions.ipynb
@@ -8,6 +8,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### dfs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "from collections import deque\n",
+    "class Solution:\n",
+    "    def solve(self, board: List[List[str]]) -> None:\n",
+    "        \"\"\"\n",
+    "        Do not return anything, modify board in-place instead.\n",
+    "        \"\"\"\n",
+    "        rows = len(board)\n",
+    "        cols = len(board[0])\n",
+    "\n",
+    "        def bfs(row, col):\n",
+    "            queue = deque([(row, col)])\n",
+    "\n",
+    "        for row in range(rows):\n",
+    "            if board[row][0] == \"O\":\n",
+    "                bfs(row, col)\n",
+    "            if board[row][cols-1] == \"O\":\n",
+    "                bfs(row, col)\n",
+    "\n",
+    "        for col in range(cols):\n",
+    "            if board[0][col] == \"O\":\n",
+    "                bfs(row, col)\n",
+    "            if board[row-1][cols] == \"O\":\n",
+    "                bfs(row, col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "board = [[\"X\",\"X\",\"X\",\"X\"],[\"X\",\"O\",\"O\",\"X\"],[\"X\",\"X\",\"O\",\"X\"],[\"X\",\"O\",\"X\",\"X\"]]\n",
+    "board = [[\"X\",\"X\",\"O\",\"O\"],[\"X\",\"O\",\"O\",\"X\"],[\"O\",\"X\",\"X\",\"X\"],[\"X\",\"O\",\"O\",\"X\"],[\"O\",\"X\",\"X\",\"X\"]]\n",
+    "Solution().solve(board)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### bfs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
