--- a/733. Flood Fill.ipynb
+++ b/733. Flood Fill.ipynb
@@ -11,12 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**時間複雜度: $O(n \\times m)$**  \n",
-    "**空間複雜度: $O(n \\times m)$**\n",
+    "**時間複雜度: $O(m \\times n)$**  \n",
+    "**空間複雜度: $O(m \\times n)$**\n",
     "\n",
     "- 變數解釋:\n",
-    "  - `n`: 圖片的行數\n",
-    "  - `m`: 圖片的列數"
+    "  - `m`: 圖片的行數\n",
+    "  - `n`: 圖片的列數"
    ]
   },
   {
